--- a/semantic.html
+++ b/semantic.html
@@ -49,7 +49,7 @@
 
 <body>
 
-    <header class="header">
+    <div class="header">
         <a href="#" class="logo">LOGO</a>
         <nav>
             <ul>
@@ -59,7 +59,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
 
     <div class="box">
         <aside class="aside">
