--- a/lesson.html
+++ b/lesson.html
@@ -65,7 +65,8 @@
     </form>
     <button tupe="Submit">Отправить</button>
 
-    <p text align="Center">И помните, что: "Многие люди терпят неудачу лишь потому, что сдаются в двух шагах от успеха"
+    <p text align="Center">И помните, что: <q>Многие люди терпят неудачу лишь потому, что сдаются в двух шагах от
+            успеха</q>
     </p>
 </body>
 
