--- a/lesson.html
+++ b/lesson.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задание №3</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -64,10 +65,12 @@
         </div>
     </form>
     <button tupe="Submit">Отправить</button>
+    <div class="footer">
+        <p>И помните, что: <q>Многие люди терпят неудачу лишь потому, что сдаются в двух шагах от
+                успеха</q>
+        </p>
+    </div>
 
-    <p text align="Center">И помните, что: <q>Многие люди терпят неудачу лишь потому, что сдаются в двух шагах от
-            успеха</q>
-    </p>
 </body>
 
 </html>
