--- a/semantic.html
+++ b/semantic.html
@@ -26,7 +26,7 @@
 
 <body>
     <!-- Родительский тег для создания контента -->
-    <div class="header">
+    <header class="header">
         <!-- Контейнер с названием класса, стилизацией -->
         <a href="#" class="logo">LOGO</a>
         <!-- ссылка -->
@@ -41,7 +41,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-    </div>
+    </header>
 
     <div class="box">
         <aside class="aside">
